{
  "version": 4,
  "terraform_version": "0.12.8",
  "serial": 17,
  "lineage": "7c881dff-048f-b690-e4a4-914af10f596c",
  "resources": [
    {
      "module": "module.infrastructure",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0f710ad031e6e5f00",
            "public_dns": "ec2-3-226-18-253.compute-1.amazonaws.com",
            "public_ip": "3.226.18.253",
            "public_ipv4_pool": "amazon",
            "tags": {
              "ASV": "ASVEVENTS",
              "Environment": "raminus-qa",
              "Name": "raminus-qa-nat_elasticip",
              "OwnerContact": "srimanivannan@gmail.com",
              "OwnerName": "Mani Srinivasan"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.infrastructure",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b69ea66ff7391e80",
            "arn": "arn:aws:ec2:us-east-1:134941652431:instance/i-09c008f95b9b879ae",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-09c008f95b9b879ae",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-key-prod",
            "monitoring": true,
            "primary_network_interface_id": "eni-01206fc5ddb845568",
            "private_dns": "ip-10-0-10-110.ec2.internal",
            "private_ip": "10.0.10.110",
            "public_dns": "ec2-54-82-97-231.compute-1.amazonaws.com",
            "public_ip": "54.82.97.231",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0ad25e4f22c9a0daf",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fd6490692955b682",
            "tags": {
              "ASV": "ASVEVENTS",
              "Environment": "raminus-qa",
              "Name": "raminus-qa-bastion",
              "OwnerContact": "srimanivannan@gmail.com",
              "OwnerName": "Mani Srinivasan"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c9aa7bd07dcf6c47"
            ]
          },
          "depends_on": [
            "aws_security_group.bastion",
            "aws_subnet.public_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0017fc3084019c007",
            "owner_id": "134941652431",
            "tags": {
              "ASV": "ASVEVENTS",
              "Environment": "raminus-qa",
              "Name": "raminus-qa-internet-gw",
              "OwnerContact": "srimanivannan@gmail.com",
              "OwnerName": "Mani Srinivasan"
            },
            "vpc_id": "vpc-0bd31fb900815c0f5"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f710ad031e6e5f00",
            "id": "nat-0d06f2d042f94c5b9",
            "network_interface_id": "eni-0578210023efa89e6",
            "private_ip": "10.0.10.64",
            "public_ip": "3.226.18.253",
            "subnet_id": "subnet-0fd6490692955b682",
            "tags": {
              "ASV": "ASVEVENTS",
              "Environment": "raminus-qa",
              "Name": "raminus-qa-nat",
              "OwnerContact": "srimanivannan@gmail.com",
              "OwnerName": "Mani Srinivasan"
            }
          },
          "depends_on": [
            "aws_eip.nat_eip",
            "aws_subnet.public_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b33f929377daae211080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-0d06f2d042f94c5b9",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b33f929377daae21",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "depends_on": [
            "aws_nat_gateway.nat",
            "aws_route_table.private"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0017fc3084019c007",
            "id": "r-rtb-03c4819da51cfc67b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03c4819da51cfc67b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "depends_on": [
            "aws_internet_gateway.ig",
            "aws_route_table.public"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0b33f929377daae21",
            "owner_id": "134941652431",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "ASV": "ASVEVENTS",
              "Environment": "raminus-qa",
              "Name": "raminus-qa-private-route-table",
              "OwnerContact": "srimanivannan@gmail.com",
              "OwnerName": "Mani Srinivasan"
            },
            "vpc_id": "vpc-0bd31fb900815c0f5"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-03c4819da51cfc67b",
            "owner_id": "134941652431",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "ASV": "ASVEVENTS",
              "Environment": "raminus-qa",
              "Name": "raminus-qa-public-route-table",
              "OwnerContact": "srimanivannan@gmail.com",
              "OwnerName": "Mani Srinivasan"
            },
            "vpc_id": "vpc-0bd31fb900815c0f5"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-005e1b4bd52647989",
            "route_table_id": "rtb-0b33f929377daae21",
            "subnet_id": "subnet-02dc519a2bb02d014"
          },
          "depends_on": [
            "aws_route_table.private",
            "aws_subnet.private_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ea59ca5eedc3829a",
            "route_table_id": "rtb-03c4819da51cfc67b",
            "subnet_id": "subnet-0fd6490692955b682"
          },
          "depends_on": [
            "aws_route_table.public",
            "aws_subnet.public_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:134941652431:security-group/sg-0c9aa7bd07dcf6c47",
            "description": "Allow SSH to bastion host",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c9aa7bd07dcf6c47",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "raminus-qa-bastion-host",
            "name_prefix": null,
            "owner_id": "134941652431",
            "revoke_rules_on_delete": false,
            "tags": {
              "ASV": "ASVEVENTS",
              "Environment": "raminus-qa",
              "Name": "raminus-qa-bastion-sg",
              "OwnerContact": "srimanivannan@gmail.com",
              "OwnerName": "Mani Srinivasan"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bd31fb900815c0f5"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:134941652431:security-group/sg-0b08ce010b8969c1d",
            "description": "Default security group to allow inbound/outbound from the VPC",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "id": "sg-0b08ce010b8969c1d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "raminus-qa-default-sg",
            "name_prefix": null,
            "owner_id": "134941652431",
            "revoke_rules_on_delete": false,
            "tags": {
              "ASV": "ASVEVENTS",
              "Environment": "raminus-qa",
              "Name": "raminus-qa-default-sg",
              "OwnerContact": "srimanivannan@gmail.com",
              "OwnerName": "Mani Srinivasan"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bd31fb900815c0f5"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:134941652431:subnet/subnet-02dc519a2bb02d014",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-02dc519a2bb02d014",
            "map_public_ip_on_launch": false,
            "owner_id": "134941652431",
            "tags": {
              "ASV": "ASVEVENTS",
              "Environment": "raminus-qa",
              "Name": "raminus-qa-private-subnet",
              "OwnerContact": "srimanivannan@gmail.com",
              "OwnerName": "Mani Srinivasan"
            },
            "vpc_id": "vpc-0bd31fb900815c0f5"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:134941652431:subnet/subnet-0fd6490692955b682",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.10.0/24",
            "id": "subnet-0fd6490692955b682",
            "map_public_ip_on_launch": true,
            "owner_id": "134941652431",
            "tags": {
              "ASV": "ASVEVENTS",
              "Environment": "raminus-qa",
              "Name": "raminus-qa-public-subnet",
              "OwnerContact": "srimanivannan@gmail.com",
              "OwnerName": "Mani Srinivasan"
            },
            "vpc_id": "vpc-0bd31fb900815c0f5"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:134941652431:vpc/vpc-0bd31fb900815c0f5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00416b552c7f4d190",
            "default_route_table_id": "rtb-0c7cf3ce29e52b3c3",
            "default_security_group_id": "sg-0ebe6310fe07917df",
            "dhcp_options_id": "dopt-01d0347a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0bd31fb900815c0f5",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0c7cf3ce29e52b3c3",
            "owner_id": "134941652431",
            "tags": {
              "ASV": "ASVEVENTS",
              "Environment": "raminus-qa",
              "Name": "raminus-qa-vpc",
              "OwnerContact": "srimanivannan@gmail.com",
              "OwnerName": "Mani Srinivasan"
            }
          }
        }
      ]
    }
  ]
}